Fix for missing target in button 3

--- a/r2/r2/templates/buttontypes.html
+++ b/r2/r2/templates/buttontypes.html
@@ -110,7 +110,7 @@ ${class_def(3)}
     %endif
   </div>
   <div class="right">
-    ${img_link('submit', '/static/blog_snoo.gif', capture(submiturl, thing.url, thing.title))}
+    ${img_link('submit', '/static/blog_snoo.gif', capture(submiturl, thing.url, thing.title), target=thing.target)}
   </div>
   <div class="clear"></div>
 </div>
