moved service monitor innards into r2.lib, updated to use ps instead of top for getting cpu and mem percentages, and added db load requests to AppServiceMonitor

--- a/r2/r2/templates/admin_rightbox.html
+++ b/r2/r2/templates/admin_rightbox.html
@@ -21,7 +21,7 @@
 ################################################################################
 
 <%
-   from supervise_watcher import AppServiceMonitor
+   from r2.lib.services import AppServiceMonitor
 %>
 
 %if c.user_is_admin:
