--- a/r2/r2/templates/loginformwide.html
+++ b/r2/r2/templates/loginformwide.html
@@ -31,7 +31,9 @@
 <form method="post" 
       id="login_${op}" action="${add_sr('/post/login', nocname = True)}" 
       %if not c.frameless_cname or c.authorized_cname:
-        onsubmit="return post_form(this, 'login');" 
+        onsubmit="return post_user(this, 'login');"
+      %else:
+        onsubmit="return update_user(this);"
       %endif
       class="login-form-side">
   %if c.cname:
