It's feedback Tuesday
* give some feedback to the user when they create a reddit
* give some feedback to the user when creating their reddit fails
* tell the user how to complain to feedback if their reddit is banned
* give some feedback to the user when they send feedback (yo dawg)

--- a/r2/r2/templates/feedback.html
+++ b/r2/r2/templates/feedback.html
@@ -22,9 +22,6 @@
 
 <%namespace file="utils.html" import="error_field"/>
 
-<p id="success" class="error">${thing.success or ''}
-</p>
-
 %if thing.title:
 <h1>${thing.title}</h1>
 %endif
@@ -38,8 +35,11 @@
       action=''
       %endif
       method="post" class="content" id="feedback">
+  <p class="success" class="error">${thing.success or ''}
+  </p>
+
   %if c.user_is_loggedin:
-  <input type="hidden" name="whodunnit" value="${c.user.name}" />
+    <input type="hidden" name="whodunnit" value="${c.user.name}" />
   %endif
   <input type="hidden" name="reason" value="${thing.action}" />
   <div>
