--- a/r2/r2/templates/utils.html
+++ b/r2/r2/templates/utils.html
@@ -347,6 +347,8 @@ ${unsafe(txt)}
       post_site: "${c.site.name if not c.default_sr else ''}",
       /* are we in an iframe */
       cnameframe: ${"true" if (c.cname and not c.authorized_cname) else "false"},
+      /* this page's referer" */
+      referer: "${request.referer or ""}",
       /* the user's voting hash */
       modhash: ${"'%s'" % c.modhash or "false"},
       /* current domain */
@@ -368,7 +370,7 @@ ${unsafe(txt)}
 <%def name="logout()">
   <form method="post" action="/logout" class="logout hover">
     <input type="hidden" name="uh" value="${c.modhash}"/>
-    <a href="javascript:void()" onclick="$(this).parent().submit()">
+    <a href="javascript:void(0)" onclick="$(this).parent().submit()">
       ${_("logout")}
     </a>
   </form>
