--- a/r2/r2/templates/reddittraffic.html
+++ b/r2/r2/templates/reddittraffic.html
@@ -110,16 +110,16 @@
 
   <div style="float:left">
     <div>
-      <img class="traffic-graph" alt='hourly uniques' style="float:right;"
+      <img class="traffic-graph" alt='hourly uniques'
            src="${thing.uniques_hour}"/>
     </div>
     <div>
-      <img class="traffic-graph" alt='daily uniques' style="float:right;"
+      <img class="traffic-graph" alt='daily uniques'
            src="${thing.uniques_day}"/>
     </div>
     %if c.default_sr:
       <div>
-        <img class="traffic-graph" alt='monthly uniques' style="float:right;"
+        <img class="traffic-graph" alt='monthly uniques'
              src="${thing.uniques_month}"/>
       </div>
     %endif
