fix blog link in footer; add padding to footer; add to subreddit subscriptions;

--- a/r2/r2/public/static/css/reddit.css
+++ b/r2/r2/public/static/css/reddit.css
@@ -977,6 +977,7 @@ textarea.gray { color: gray; }
 
 /* footer */
 .footer-parent {
+    padding-top: 40px; 
     clear: both;
     text-align: center;
 }
